<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/view_gray_back"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.view.MTextView
                    android:id="@+id/titleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:gravity="start"
                    android:text=" "
                    android:textAlignment="viewStart"
                    android:textColor="#141414"
                    android:textSize="@dimen/_13ssp"
                    app:customTypeFace="@string/systemSemiBold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.view.MTextView
                    android:id="@+id/detailsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:maxLines="3"
                    android:text=" "
                    android:textAlignment="viewStart"
                    android:textColor="#484848"
                    android:textSize="@dimen/_11ssp"
                    app:customTypeFace="@string/systemRegular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

                <com.view.MTextView
                    android:id="@+id/dateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=" "
                    android:textAlignment="viewStart"
                    android:textColor="#929292"
                    android:textSize="@dimen/_10ssp"
                    app:customTypeFace="@string/systemRegular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/btnArea"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center|start"
                android:minHeight="@dimen/_25sdp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

                <com.view.MTextView
                    android:id="@+id/readMoreTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_3ssp"
                    android:layout_marginEnd="@dimen/_3ssp"
                    android:ellipsize="end"
                    android:gravity="center|start"
                    android:maxLines="2"
                    android:textAlignment="center"
                    android:textColor="@color/primary_color_blue"
                    android:textSize="@dimen/_10sdp"
                    app:customTypeFace="@string/systemMediumFont" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
