<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:foregroundGravity="center"
    android:orientation="vertical"
    tools:context="com.fragments.SignInFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <ImageView

                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:srcCompat="@drawable/ic_clear" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="Sign In"
                android:textColor="@color/black"
                android:textSize="@dimen/_32ssp"
                app:customTypeFace="@string/systemRegular" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <include
            android:id="@+id/emailBox"
            layout="@layout/editbox_form_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <include
            android:id="@+id/passwordBox"
            layout="@layout/editbox_form_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <com.view.MTextView
        android:id="@+id/forgetPassTxt"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:text=""
        android:textColor="#646464"
        android:textSize="@dimen/_11ssp"
        app:customTypeFace="@string/systemLightFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18" />

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18">


        <LinearLayout
            android:id="@+id/btnArea"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/all_btn_height"
            android:background="@drawable/button_shape_black_more"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">


            <com.view.MTextView
                android:id="@+id/btnTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/appThemeColor_TXT_1"
                android:textSize="@dimen/_15ssp"
                android:visibility="visible"
                app:customTypeFace="@string/systemMediumFont" />

            <ImageView
                android:id="@+id/btnImg"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_17sdp"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_right_arrow" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <com.view.MTextView
            android:id="@+id/signbootomHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_12"
            app:customTypeFace="@string/systemLightFont" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
