<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.fragments.SignInFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <ImageView

                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:srcCompat="@drawable/ic_clear" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Sign In"
                android:textColor="@color/black"
                android:textSize="@dimen/_32ssp"
                app:customTypeFace="@string/systemRegular" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="20">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/mail" />

            <include
                android:id="@+id/emailBox"
                layout="@layout/editbox_form_design"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/password" />

            <include
                android:id="@+id/passwordBox"
                layout="@layout/editbox_form_design"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <com.view.MTextView
        android:id="@+id/forgetPassTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="start"
        android:text="Forget Pssword"
        android:textColor="@color/primary_color_blue"
        android:textSize="@dimen/_11ssp"
        app:customTypeFace="@string/systemLightFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassTxt">


        <LinearLayout
            android:id="@+id/btnArea"
            android:layout_width="200dp"
            android:layout_height="@dimen/all_btn_height"
            android:background="@drawable/button_shape_black"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingStart="40dp">


            <com.view.MTextView
                android:id="@+id/btnTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/appThemeColor_TXT_1"
                android:textSize="@dimen/_15ssp"
                android:visibility="visible"
                app:customTypeFace="@string/systemMediumFont" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <com.view.MTextView
            android:id="@+id/signbootomHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_12"
            app:customTypeFace="@string/systemLightFont" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>

        <LinearLayout
            android:id="@+id/socialarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="#b9b9b9" />


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:rotation="-45" />

                <com.view.MTextView
                    android:id="@+id/orTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="OR"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:customTypeFace="@string/systemLightFont" />


            </RelativeLayout>

            <com.view.MTextView
                android:id="@+id/signheaderHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="SIGN IN WITH SOCIAL ACCOUNT"
                android:textColor="#000000"
                android:textSize="@dimen/txt_size_12"
                app:customTypeFace="@string/systemLightFont" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagefacebook"
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:srcCompat="@drawable/facebook" />


                <ImageView
                    android:id="@+id/imagetwitter"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageView
                    android:id="@+id/imagelinkedin"
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:srcCompat="@drawable/twitter" />


                <ImageView
                    android:id="@+id/imageGoogle"
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="@dimen/_56sdp"
                    android:layout_marginEnd="22dp"
                    app:srcCompat="@drawable/linkedin" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
